<resources>
    <string name="app_name">Light Microfinance</string>
    <string name="ok">OK</string>
    <string name="you_dont_have_a_rights">You dont have a rights</string>
    <string name="please_wait">Please wait..</string>
    <string name="pending">Pending</string>
    <string name="g_total">Grand TOtal</string>
    <string name="partialy">Partially</string>
    <string name="collected">Collected</string>
    <string name="center_name">Center Name</string>
    <string name="select_field_executive">Select Field Executive</string>
    <string name="payment_received">Payment Received</string>
    <string name="full">Full</string>
    <string name="partial">Partial</string>
    <string name="not_received">Not Received</string>
    <string name="RS">\u20b9 </string>
    <string name="reason">Reason</string>
    <string name="remark">Remarks</string>
    <string name="submit">Submit</string>
    <string name="loremupsome">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="msg_logout">Would you like to exit from the App?</string>
    <string name="otp_verify">OTP Verification</string>
    <string name="reset_text">We will send you New Auto Generate Password</string>
    <string name="otp_text">We will send you an OTP on your Registered mobile number</string>
    <string name="emp_id">Employee ID</string>
    <string name="getotp">Get otp</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="loan_ac_number">Loan Ac. Number</string>
    <string name="loan_id">Loan ID</string>
    <string name="branch_name">Branch Name</string>
    <string name="date">Date</string>
    <string name="outstanding_amount">Outstanding Amount</string>
    <string name="total_collection">Total Collection</string>
    <string name="regular_collection">Regular Collection</string>
    <string name="advance_collection">Advance Collection</string>
    <string name="percentage">Percentage</string>
    <string name="par">PAR</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="bussiness">Business</string>
    <string name="settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="fe_code">FE Code</string>
    <string name="client_id">Client ID</string>
    <string name="business_summary">Business Summary</string>
    <string name="business_current_summary">Business This Month Summary</string>
    <string name="collection_summary">Collection Summary</string>
    <string name="par_summary">Par Summary</string>
    <string name="client_name">Client Name</string>
    <string name="par_amount">PAR Amount</string>
    <string name="over_due_amount">Over Due Amount</string>
    <string name="bucket">Bucket</string>
    <string name="search">Search</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="show_server_error">Server Connetion Failed.</string>
    <string name="enter_empid">Enter EmployeeID</string>
    <string name="enter_valid_empid">Enter Valid EmployeeID</string>
    <string name="enter_valid_password">Enter Minimum Six Character Password</string>
    <string name="change_pwd">Change Password</string>
    <string name="enter_old_pwd">Enter OLD Password</string>
    <string name="password_same_old_new">New Password Can Not Be Same As Old Password</string>
    <string name="password_not_matched">Password Not Matched</string>
    <string name="target">Target</string>
    <string name="achived">Achived</string>
    <string name="per_achived">% Ach</string>
    <string name="le_new">LE New</string>
    <string name="le_renewl">LE Renewal</string>
    <string name="total_le">Total LE</string>
    <string name="dd_done">DD Done</string>
    <string name="dd_pos">DD +ve</string>
    <string name="grt">GRT</string>
    <string name="dsb_cleint">Disb Client</string>
    <string name="dsb_amount">Disb Amount</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="collection_percentage">Collection Percentage</string>
    <string name="report">Reports</string>
    <string name="diff">Diff.</string>
    <string name="actual">Actual</string>
    <string name="plan">Plan</string>
    <string name="parameter">Parameter</string>
    <string name="_le_new">LE - New</string>
    <string name="_le_re_new">LE - Renew</string>
    <string name="dd">DD</string>
    <string name="dd_ve">DD +ve</string>
    <string name="disb_client">Disb Client</string>
    <string name="disb_amount">Disb Amount</string>

    <string name="plan_amount">0</string>
    <string name="actual_amount">0</string>
    <string name="diff_amount">0</string>
    <string name="per_achived_amount">0%</string>
    <string name="clients">Clients</string>
    <string name="buckets">Buckets</string>

    <string name="od_amount">OD Amount</string>
    <string name="_1_to_30"><u>1 to 30</u> </string>
    <string name="_31_to_60"><u>31 to 60</u></string>
    <string name="_61_to_90"><u>61 to 90</u></string>
    <string name="_91_to_180"><u>91 to 180</u></string>
    <string name="_180_above"><u>180 above</u></string>
    <string name="demand">Demand</string>
    <string name="due_date">Due Date</string>
    <string name="emplyeer_name">Employee Code</string>
    <string name="month">Month</string>
    <string name="opening_cleints">Opening Clients</string>
    <string name="new_add">New Clients Add</string>
    <string name="ma_cleints">Mature/Closed Clients</string>
    <string name="re_new_dis">Renew Dis.</string>
    <string name="closing_cleints">Closing Clients</string>
    <string name="collection_par">Collection %</string>
    <string name="total_ds_cleint">Total Dis.</string>
    <string name="goal_sheet">Goal Sheet</string>
    <string name="original_collection">Original Collection</string>
    <string name="original_demand">Original Demand</string>
    <string name="current_demand">Current Demand</string>
    <string name="today_collection">Today\'s Collection</string>

    <string name="msg_install_latest_version">Please install the latest version of this app.</string>
    <string name="action_update">Update</string>
    <string name="this_month_data">Show Current Month Data</string>
    <string name="to"> To </string>
    <string name="all_data">All Month Data</string>
    <string name="all">All</string>
    <string name="visit_done">Visit Done</string>


</resources>