<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainView"
    android:layout_margin="@dimen/_16ssp">

    <androidx.cardview.widget.CardView

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_12sdp">

            <com.commonProject.customview.TextviewMedium
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:text="@string/reset_password"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_btn_close" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/idservice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/inpnumber"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle">

                <com.commonProject.customview.TextviewReguler
                    android:id="@+id/txtServiceTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:text="@string/reset_text"
                    android:gravity="center"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpnumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/emp_id"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idservice">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textCapCharacters"
                    android:maxLength="8"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.commonProject.customview.ButtonReguler
                android:id="@+id/btnGetOtp"
                style="@style/CustomPressButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inpnumber" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>


