<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <include
        android:id="@+id/includes"
        layout="@layout/toolbar_with_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/includes"
        app:layout_constraintStart_toStartOf="@+id/includes"
        app:layout_constraintTop_toBottomOf="@+id/includes">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inCleintName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:dividerPadding="@dimen/_2sdp"
            android:hint="@string/client_name"
            android:textColorHint="@color/icon_color"
            app:boxBackgroundColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtCleintName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/inCleintID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:dividerPadding="@dimen/_2sdp"
            android:hint="@string/client_id"
            android:textColorHint="@color/icon_color"
            app:boxBackgroundColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inCleintName">

            <EditText
                android:id="@+id/edtCleintID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="number"
                android:maxLength="100"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inLoanID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:dividerPadding="@dimen/_2sdp"
            android:hint="@string/loan_id"
            android:textColorHint="@color/icon_color"
            app:boxBackgroundColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inCleintID">

            <EditText
                android:id="@+id/edtLoanID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="number"
                android:maxLength="100"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inBucket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:dividerPadding="@dimen/_2sdp"
            android:hint="@string/bucket"
            android:textColorHint="@color/icon_color"
            android:visibility="gone"
            app:boxBackgroundColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inLoanID"
            tools:visibility="visible">

            <EditText
                android:id="@+id/edtBucketSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:maxLength="100"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linlayCenterName"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_spinner"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inEndDate">


            <tech.hibk.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spCenterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:clickable="false"
                android:focusable="false"
                android:padding="@dimen/_5sdp"
                app:cancelButtonColor="@color/black"
                app:cancelButtontext="CLOSE"
                app:dialogTitle="@string/center_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:nothingSelectedText="@string/center_name"
                app:onlyLightTheme="true" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/spCenterName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spCenterName" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:dividerPadding="@dimen/_2sdp"
            android:hint="@string/start_date"
            android:textColorHint="@color/icon_color"
            app:boxBackgroundColor="#FFF"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inBucket">

            <EditText
                android:id="@+id/edtStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="date"
                android:focusable="false"
                android:maxLength="100"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:dividerPadding="@dimen/_2sdp"
            android:hint="@string/end_date"
            android:textColorHint="@color/icon_color"
            app:boxBackgroundColor="#FFF"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inStartDate">

            <EditText
                android:id="@+id/edtEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:inputType="date"
                android:focusable="false"
                android:maxLength="100"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.commonProject.customview.ButtonReguler
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_52sdp"
            android:background="@drawable/custom_button_press_bg"
            android:text="@string/search"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlayCenterName"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>