<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.commonProject.customview.TextviewReguler
        android:id="@+id/txtPending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_absentt"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/pending"
        android:textColor="@drawable/selector_attendance_textview"
        app:layout_constraintEnd_toStartOf="@+id/txtPartialy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.commonProject.customview.TextviewReguler
        android:id="@+id/txtPartialy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_half_day"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/partialy"
        android:textColor="@drawable/selector_attendance_textview"
        app:layout_constraintEnd_toEndOf="@+id/txtCollected"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtPending"
        app:layout_constraintTop_toTopOf="parent" />

    <com.commonProject.customview.TextviewReguler
        android:id="@+id/txtCollected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/button_present"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/collected"
        android:textColor="@drawable/selector_attendance_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtPartialy"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCollected">

        <include
            android:id="@+id/rvSwipe"
            layout="@layout/reclerview_swipelayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>