<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/ic_login_logo" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/bg_round_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.commonProject.customview.TextviewMedium
                android:id="@+id/txtSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_20ssp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:dividerPadding="@dimen/_2sdp"
                android:hint="@string/emp_id"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/icon_color"
                app:boxBackgroundColor="#FFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSignin">

                <EditText
                    android:id="@+id/edtEmpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/black"
                />
            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/til1"
                app:layout_constraintStart_toStartOf="@id/til1"
                app:layout_constraintTop_toBottomOf="@+id/til1" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"

                android:hint="@string/password"
                android:textColorHint="@color/icon_color"
                app:boxBackgroundColor="#FFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til1"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/icon_color"
             >

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:textColorHint="@color/black"
                  />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/til2"
                app:layout_constraintStart_toStartOf="@id/til2"
                app:layout_constraintTop_toBottomOf="@+id/til2" />

            <com.commonProject.customview.TextviewReguler
                android:id="@+id/txtForgotpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/til2" />

            <com.commonProject.customview.ButtonReguler
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_52sdp"
                android:background="@drawable/custom_button_press_bg"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/til2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/til2"
                app:layout_constraintTop_toBottomOf="@+id/txtForgotpwd"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>